# city-scale-patrol-planning

./: .gitignore  README.md  pyproject.toml  setup.cfg
configs/: default.yaml  la_central_january_2023.yaml  la_central_poisson.yaml
scripts/: download_dataset.py
src/patrol_planning/: __init__.py  __main__.py
src/patrol_planning/baselines/: __init__.py  greedy_visibility.py  static_checkpoints.py
src/patrol_planning/cli/: app.py
src/patrol_planning/config/: __init__.py  models.py  selection.py
src/patrol_planning/data/: __init__.py
src/patrol_planning/demand/: __init__.py  classification.py  poisson.py  vfop.py
src/patrol_planning/domain/: __init__.py  models.py  routes.py
src/patrol_planning/evaluation/: __init__.py  pvr.py  routes.py
src/patrol_planning/experiments/: __init__.py  baseline_comparison.py  baseline_plots.py  final_evaluation.py  final_plots.py  plots.py  runner.py  success_criteria.py
src/patrol_planning/geography/: __init__.py  grid.py
src/patrol_planning/output/: __init__.py  layout.py
src/patrol_planning/scenarios/: __init__.py  builder.py  export.py
src/patrol_planning/time/: __init__.py  periods.py
src/patrol_planning/travel/: __init__.py  grid.py
src/patrol_planning/validation/: __init__.py  grafting.py  maxp.py  minp.py  reports.py  (+1 more)
tests/: test_baselines.py  test_classification.py  test_config_selection.py  test_experiments.py  test_grafting.py  test_grid.py  test_la_adapter.py  test_maxp.py  test_minp.py  test_run_metrics.py  test_scenario.py  test_success_criteria.py  test_time.py  test_vfop_visualization.py
(+23 files in other folders)
